--- a/src/public/index.html
+++ b/src/public/index.html
@@ -17,7 +17,7 @@
         </td>
         <td>
           <h1 id="message">Hello World!</h1>
-          <p class='description'></p> Thanque for creating a <span class = "blue">NodeJS Starter Application</span>.
+          <p class='description'></p> Welqum to sm4's bluemix <span class = "blue">NodeJS Starter Application</span>.
         </td>
       </tr>
     </table>
